# pair

./: Cargo.toml  README.org  flake.nix
examples/: fastrope.rs  sphere.rs
examples/common/: mod.rs
src/: lib.rs
