[package]
name = "pair"
version = "0.0.1"
edition = "2021"

[dev-dependencies]
bevy = { version = "0.13", default-features = false, features = [
  "bevy_asset",
  #"bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "tonemapping_luts",
  "x11",
]}
bevy_egui = "0.27"
