[package]
name = "pair"
version = "0.0.1"
edition = "2021"

[[example]]
name = "sphere"

[[example]]
name = "fastrope"

[dev-dependencies]
bevy = { version = "0.13", default-features = false, features = [
        "bevy_asset",
        "bevy_core_pipeline",
        "bevy_gizmos",
        "bevy_pbr",
        "bevy_render",
        "bevy_winit",
        "tonemapping_luts",
        "x11",
] }
bevy_egui = "0.27"
bevy_transform_gizmo = "0.11.0"
bevy_mod_picking = { version = "0.18", default-features = false, features = [
        "selection",
        "backend_raycast",
        "highlight",
        "bevy_picking_raycast",
] }
# bevy_mod_raycast = "0.17"
